--- a/FileManager/FileManager.csproj
+++ b/FileManager/FileManager.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <Version>2.1.6</Version>
+    <Version>2.1.7</Version>
     <Authors>Kalandor01</Authors>
     <Description>File encoding tools.</Description>
     <Copyright>MIT</Copyright>
@@ -18,6 +18,7 @@
     <NeutralLanguage>en-001</NeutralLanguage>
     <Title>File manager</Title>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <LangVersion>13</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NPrng" Version="1.0.0.4" />
+    <PackageReference Include="NPrng" Version="1.0.0.5" />
   </ItemGroup>
 
 </Project>
